--- a/tensorflow/notebooks/TensorFlow/cnn/fashion_mnist_on_hops.ipynb
+++ b/tensorflow/notebooks/TensorFlow/cnn/fashion_mnist_on_hops.ipynb
@@ -67,7 +67,7 @@
     "project_path = hdfs.project_path()\n",
     "```\n",
     "\n",
-    "![image11-Dataset-ProjectPath.png](../images/datasets.png)"
+    "![image11-Dataset-ProjectPath.png](../../images/datasets.png)"
    ]
   },
   {
@@ -346,21 +346,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Image7-Monitor.png](../images/jupyter.png)"
+    "![Image7-Monitor.png](../../images/jupyter.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Image4-LaunchTensorboard.png](../images/overview.png)"
+    "![Image4-LaunchTensorboard.png](../../images/overview.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Image8-Tensorboard.png](../images/tensorboard.png)"
+    "![Image8-Tensorboard.png](../../images/tensorboard.png)"
    ]
   },
   {
@@ -375,14 +375,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Image6-GoToLogs.png](../images/logs.png)"
+    "![Image6-GoToLogs.png](../../images/logs.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Image9-Logs.png](../images/viewlogs.png)"
+    "![Image9-Logs.png](../../images/viewlogs.png)"
    ]
   },
   {
@@ -391,7 +391,7 @@
    "source": [
     "## Increasing throughput - Running jobs in parallel <a class=\"anchor\" id='parallel'></a>\n",
     "The default configuration is to run each job sequentially, so each one of the 6 hyperparameter configuration is run sequentially. It is possible to increase the number of jobs that can be executed at any time by increasing the value of the configuration property shown in the picture below. To do this you need to restart Jupyter, by navigating back to HopsWorks and shutting it down.\n",
-    "![parallel.png](../images/parallel.png)"
+    "![parallel.png](../../images/parallel.png)"
    ]
   },
   {
@@ -418,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image12-TensorboardAgg.png](../images/visualize.png)"
+    "![image12-TensorboardAgg.png](../../images/visualize.png)"
    ]
   },
   {
