--- a/tensorflow/notebooks/TensorFlow/multi_gpu/Multi-gpu_training_cifar.ipynb
+++ b/tensorflow/notebooks/TensorFlow/multi_gpu/Multi-gpu_training_cifar.ipynb
@@ -189,7 +189,7 @@
     "    data_dir = hdfs.project_path() + \"TestJob/data/cifar10/\"\n",
     "    train_filenames = [data_dir + \"/train/train.tfrecords\"]\n",
     "    validation_filenames = [data_dir + \"/validation/validation.tfrecords\"]\n",
-    "    test_filenames = [data_dir + \"eval/eval.tfrecords\"]\n",
+    "    test_filenames = [data_dir + \"test/test.tfrecords\"]\n",
     "    \n",
     "    train_iterator = data_input_fn(tf, train_filenames, \n",
     "                                   batch_size=batch_size,\n",
