--- a/tensorflow/notebooks/TensorFlowOnSpark/tfos_inception.ipynb
+++ b/tensorflow/notebooks/TensorFlowOnSpark/tfos_inception.ipynb
@@ -18,6 +18,8 @@
     "from tensorflowonspark import TFCluster, TFNode\n",
     "from datetime import datetime\n",
     "\n",
+    "from hops import util\n",
+    "\n",
     "import os\n",
     "import sys\n",
     "import tensorflow as tf\n",
@@ -68,17 +70,17 @@
     "parser = argparse.ArgumentParser()\n",
     "parser.add_argument(\"--epochs\", help=\"number of epochs\", type=int, default=5)\n",
     "parser.add_argument(\"--steps\", help=\"number of steps\", type=int, default=500000)\n",
-    "parser.add_argument(\"--input_data\", help=\"HDFS path to input dataset\", default=hdfs.project_path() + \"/TestJob/data/inception\")\n",
     "parser.add_argument(\"--input_mode\", help=\"method to ingest data: (spark|tf)\", choices=[\"spark\",\"tf\"], default=\"tf\")\n",
     "parser.add_argument(\"--tensorboard\", help=\"launch tensorboard process\", action=\"store_true\")\n",
+    "# the path to the input dataset is defined in dataset.py in inception.zip\n",
     "\n",
     "(args,rem) = parser.parse_known_args()\n",
     "input_mode = TFCluster.InputMode.SPARK if args.input_mode == 'spark' else TFCluster.InputMode.TENSORFLOW\n",
     "\n",
     "print(\"{0} ===== Start\".format(datetime.now().isoformat()))\n",
     "sc = spark.sparkContext\n",
-    "num_executors = int(sc._conf.get(\"spark.executor.instances\"))\n",
-    "num_ps = int(sc._conf.get(\"spark.tensorflow.num.ps\"))\n",
+    "num_executors = util.num_executors(spark)\n",
+    "num_ps = util.num_param_servers(spark)\n",
     "\n",
     "cluster = TFCluster.run(sc, main_fun, sys.argv, num_executors, num_ps, args.tensorboard, input_mode)\n",
     "if input_mode == TFCluster.InputMode.SPARK:\n",
@@ -89,6 +91,13 @@
     "cluster.shutdown()\n",
     "print(\"{0} ===== Stop\".format(datetime.now().isoformat()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
