--- a/tensorflow/notebooks/TensorFlow/cnn/cifar10_on_hops.ipynb
+++ b/tensorflow/notebooks/TensorFlow/cnn/cifar10_on_hops.ipynb
@@ -340,7 +340,7 @@
    "source": [
     "## Running the training using `experiment` module <a class=\"anchor\" id='starting'></a>\n",
     "\n",
-    "The last, and arguably most important module that we demonstrate from the `hops` module is called `experiment`. The `experiment` module provides a single function called `launch`. As arguments it simply takes the `spark` SparkSession object, which is automatically created when the first cell is evaluated in the notebook, in addition to the wrapper function and the dictionary with the hyperparameters. `tflauncher.launch` will simply run the wrapper function and inject the value of each hyperparameter that you have specified. Assuming that you started Jupyter with the default configuration, each job will be run sequentially. To increase throughput by running two or more jobs in parallel, please see [this](#parallel)."
+    "The last, and arguably most important module that we demonstrate from the `hops` module is called `experiment`. The `experiment` module provides a single function called `launch`. As arguments it simply takes the `spark` SparkSession object, which is automatically created when the first cell is evaluated in the notebook, in addition to the wrapper function and the dictionary with the hyperparameters. `experiment.launch` will simply run the wrapper function and inject the value of each hyperparameter that you have specified. Assuming that you started Jupyter with the default configuration, each job will be run sequentially. To increase throughput by running two or more jobs in parallel, please see [this](#parallel)."
    ]
   },
   {
