--- a/tensorflow/notebooks/TensorFlow/cnn/fashion_mnist_on_hops.ipynb
+++ b/tensorflow/notebooks/TensorFlow/cnn/fashion_mnist_on_hops.ipynb
@@ -49,7 +49,7 @@
     "Below you can see the aforementioned wrapper function, which is coincidently named `wrapper` but could potentially be named anything. You can see two imports from the `hops` module, a `tensorboard` and an `hdfs` module. These are the only two modules that you will need to use in your TensorFlow wrapper function. \n",
     "\n",
     "### Using the `tensorboard` module\n",
-    "The `tensorboard` module allow us to get the log directory for summaries and checkpoints to be written to the TensorBoard we will see in a bit. The only function that we currently need to call is `tensorboard.logdir()`, which returns the path to the TensorBoard log directory. Furthermore, the content of this directory will be put in as a Dataset in your project in HopsFS after each hyperparameter configuration is finished. The `tflaunch.launch` function, that we will look at abit further down will return the exact path, which you can then navigate to using HopsWorks to inspect the files.\n",
+    "The `tensorboard` module allow us to get the log directory for summaries and checkpoints to be written to the TensorBoard we will see in a bit. The only function that we currently need to call is `tensorboard.logdir()`, which returns the path to the TensorBoard log directory. Furthermore, the content of this directory will be put in as a Dataset in your project in HopsFS after each hyperparameter configuration is finished. The `experiment.launch` function, that we will look at abit further down will return the exact path, which you can then navigate to using HopsWorks to inspect the files.\n",
     "\n",
     "The directory could in practice be used to store other data that should be accessible after each hyperparameter configuration is finished.\n",
     "```python\n",
@@ -318,9 +318,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Running the training using `tflauncher` module <a class=\"anchor\" id='starting'></a>\n",
+    "## Running the training using `experiment` module <a class=\"anchor\" id='starting'></a>\n",
     "\n",
-    "The last, and arguably most important module that we demonstrate from the `hops` module is called `tflauncher`. The `tflauncher` module provides a single function called `launch`. As arguments it simply takes the `spark` SparkSession object, which is automatically created when the first cell is evaluated in the notebook, in addition to the wrapper function and the dictionary with the hyperparameters. `tflauncher.launch` will simply run the wrapper function and inject the value of each hyperparameter that you have specified. Assuming that you started Jupyter with the default configuration, each job will be run sequentially. To increase throughput by running two or more jobs in parallel, please see [this](#parallel)."
+    "The last, and arguably most important module that we demonstrate from the `hops` module is called `experiment`. The `experiment` module provides a single function called `launch`. As arguments it simply takes the `spark` SparkSession object, which is automatically created when the first cell is evaluated in the notebook, in addition to the wrapper function and the dictionary with the hyperparameters. `experiment.launch` will simply run the wrapper function and inject the value of each hyperparameter that you have specified. Assuming that you started Jupyter with the default configuration, each job will be run sequentially. To increase throughput by running two or more jobs in parallel, please see [this](#parallel)."
    ]
   },
   {
@@ -329,9 +329,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hops import tflauncher\n",
+    "from hops import experiment\n",
     "\n",
-    "tensorboard_hdfs_logdir = tflauncher.launch(spark, wrapper, args_dict_grid)"
+    "tensorboard_hdfs_logdir = experiment.launch(spark, wrapper, args_dict_grid)"
    ]
   },
   {
