--- a/tensorflow/notebooks/TensorFlow/gan/mnist_gan_reconstruction.ipynb
+++ b/tensorflow/notebooks/TensorFlow/gan/mnist_gan_reconstruction.ipynb
@@ -404,9 +404,9 @@
    },
    "outputs": [],
    "source": [
-    "from hops import tflauncher\n",
+    "from hops import experiment\n",
     "\n",
-    "tensorboard_hdfs_logdir = tflauncher.launch(spark, wrapper, args_dict_grid)"
+    "tensorboard_hdfs_logdir = experiment.launch(spark, wrapper, args_dict_grid)"
    ]
   },
   {
