--- a/tensorflow/notebooks/TensorFlow/multi_gpu/Multi-gpu_training_mnist.ipynb
+++ b/tensorflow/notebooks/TensorFlow/multi_gpu/Multi-gpu_training_mnist.ipynb
@@ -303,8 +303,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hops import tflauncher\n",
-    "tflauncher.launch(spark, wrapper)"
+    "from hops import experiment\n",
+    "experiment.launch(spark, wrapper)"
    ]
   }
  ],
