--- a/tensorflow/notebooks/PyTorch/mnist.ipynb
+++ b/tensorflow/notebooks/PyTorch/mnist.ipynb
@@ -170,8 +170,8 @@
    },
    "outputs": [],
    "source": [
-    "from hops import tflauncher\n",
-    "tflauncher.launch(spark, wrapper)"
+    "from hops import experiment\n",
+    "experiment.launch(spark, wrapper)"
    ]
   },
   {
