--- a/tensorflow/notebooks/Serving/serving_client.ipynb
+++ b/tensorflow/notebooks/Serving/serving_client.ipynb
@@ -28,7 +28,7 @@
     "concurrency=1\n",
     "num_tests=100\n",
     "work_dir=os.getcwd()\n",
-    "server=serving.get_serving_endpoint(\"mnist\")\n",
+    "server=\"host:ip\"\n",
     "\n",
     "\n",
     "class _ResultCounter(object):\n",
