--- a/tensorflow/notebooks/Serving/train_and_export_model.ipynb
+++ b/tensorflow/notebooks/Serving/train_and_export_model.ipynb
@@ -109,8 +109,8 @@
     "\n",
     "    serving.export(export_path, \"mnist\", 1)\n",
     "    \n",
-    "from hops import tflauncher\n",
-    "tflauncher.launch(spark, wrapper)"
+    "from hops import experiment\n",
+    "experiment.launch(spark, wrapper)"
    ]
   },
   {
