--- a/tensorflow/notebooks/TensorFlow/gan/mnist_gan_reconstruction.ipynb
+++ b/tensorflow/notebooks/TensorFlow/gan/mnist_gan_reconstruction.ipynb
@@ -326,7 +326,7 @@
     "        assert(False)\n",
     "\n",
     "    #for each batch\n",
-    "    for idx in xrange(0, batch_idxs):\n",
+    "    for idx in range(0, batch_idxs):\n",
     "        l = idx*batch_size\n",
     "        u = min((idx+1)*batch_size, nImgs)\n",
     "        batchSz = u-l\n",
@@ -345,7 +345,7 @@
     "        beta2 = beta1\n",
     "        nIter = 10000 # number of iteration of the completion optimization for each batch\n",
     "\n",
-    "        for i in xrange(nIter):\n",
+    "        for i in range(nIter):\n",
     "            fd = {\n",
     "                z: zhats,\n",
     "                mask: mask1,\n",
